--- a/Logica/12vetor.html
+++ b/Logica/12vetor.html
@@ -14,7 +14,7 @@
 
 // [1] é a posição do objeto dentro do vetor, lembrando que sempre inicia em 0.
 
-//Laço para (for) - usado mais em vetor por sabermos o ponto inicial e o ponto final.
+//Laço para (for) - usado mais em vetor pois sabermos o ponto inicial e o ponto final.
 //Estrutura : Inicio do indice, termino do indice, incremento.
 
 for (var indice = 0;indice < cores.length; indice++){
