--- a/Logica/LISTA_03/atividade05.html
+++ b/Logica/LISTA_03/atividade05.html
@@ -9,10 +9,37 @@
  /*5. Desenvolver um sistema, onde existam três campos para pedir notas e um campo para pedir as faltas do aluno. 
  Faça a média, exiba a média e a situação do aluno (aprovado ou reprovado), em caso de 11 faltas ou mais, o aluno estará reprovado, 
  independente a média.*/
+
+ function verificar(){
+
+   var n1 = parseFloat( document.getElementById("n1").value)
+    var n2 = parseFloat(document.getElementById("n2").value)
+    var n3 = parseFloat(document.getElementById("n3").value)
+    var faltas = parseFloat( document.getElementById("faltas").value)
+
+    var media = (n1 + n2+ n3)/3
+
+    if(faltas >=11){
+        document.getElementById("exibir").innerHTML = "Sua média é" +media+ "Você está reprovado por falta."
+    }else if(media >=7){
+        document.getElementById("exibir").innerHTML = "Sua média é " +media+". Parabéns! Você está aprovado"
+    }else if(media<7){
+        document.getElementById("exibir").innerHTML = "Sua média é "+media+". Você está reprovado."
+    }
+
+}
+
        
     </script>
 </head>
 <body>
-    
+    <input type="number" placeholder="Digite nota 1" id="n1">
+    <input type="number" placeholder="Digite nota 2 " id="n2">
+    <input type="number" placeholder="Digite nota 3"  id="n3">
+    <input type="number" placeholder="Numero de faltas"  id="faltas">
+
+    <button onclick="verificar()">Verificar</button>
+
+    <p id= "exibir"></p>
 </body>
 </html>
